--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: java
-
 sudo: false
+jdk:
+  - oraclejdk8
 
-gem install hiptest-publisher
-hiptest-publisher -c publisher.config
+before_install:
+  - rvm install 2.2
+  - rvm use 2.2
+  - gem install hiptest-publisher
+  - hiptest-publisher -c hiptest-publisher.conf --token=8634063014329869632185981892352964833992354527938615994 --only=tests --test-run-id=46454
 
-mvn package
+script:
+  - mvn package
