--- a/hiptest-publisher.config
+++ b/hiptest-publisher.config
@@ -1,6 +1,8 @@
-token = '27395982402448062684558306762896586824263608303752522593'
 language = java
-output_directory = './src/test/java/com/example'
+output_directory = './'
 package = 'com.example'
-test_run_id=46159
-push_format=junit
+token = 8634063014329869632185981892352964833992354527938615994
+split_scenarios = false
+with_folders = false
+leafless_export = false
+no_uids = false
